--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "mosaicx"
-version = "0.1.0"
+version = "1.0.0"
 description = "Medical cOmputational Suite for Advanced Intelligent eXtraction - Intelligent radiology report extraction using local LLMs"
 authors = [
     {name = "Lalith Kumar Shiyam Sundar", email = "lalith.shiyam@med.uni-muenchen.de"},
@@ -13,7 +13,7 @@ readme = "README.md"
 license = {file = "LICENSE"}
 keywords = ["radiology", "medical", "llm", "extraction", "pdf", "nlp"]
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Healthcare Industry",
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: Apache Software License",
