--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ requires-python = ">=3.11"
 dependencies = [
     "click>=8.1.0",
     "rich>=13.0.0",
+    "rich-click>=1.8.0",
     "pydantic>=2.0.0",
     "openai>=1.0.0",
     "dspy-ai>=2.4.0",
@@ -34,6 +35,9 @@ dependencies = [
     "pyyaml>=6.0",
     "httpx>=0.25.0",
     "typing-extensions>=4.8.0",
+    "ollama>=0.3.0",
+    "python-cfonts>=1.0.0",
+    "instructor>=1.0.0",
 ]
 
 [project.optional-dependencies]
@@ -55,7 +59,7 @@ Documentation = "https://github.com/LalithShiyam/MOSAICX#readme"
 "Bug Tracker" = "https://github.com/LalithShiyam/MOSAICX/issues"
 
 [project.scripts]
-mosaicx = "mosaicx.cli.main:main"
+mosaicx = "mosaicx.mosaicx:main"
 
 [tool.hatch.build.targets.wheel]
 packages = ["mosaicx"]
