--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "hatchling.build"
 
 [project]
 name = "mosaicx"
-version = "1.0.2"
-description = "Medical cOmputational Suite for Advanced Intelligent eXtraction - Intelligent radiology report extraction using local LLMs"
+version = "1.0.3"
+description = "Medical cOmputational Suite for Advanced Intelligent eXtraction"
 authors = [
     {name = "Lalith Kumar Shiyam Sundar", email = "lalith.shiyam@med.uni-muenchen.de"},
 ]
