--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "mosaicx"
-version = "1.0.9"
+version = "1.0.10"
 description = "Medical cOmputational Suite for Advanced Intelligent eXtraction"
 authors = [
     {name = "Lalith Kumar Shiyam Sundar", email = "lalith.shiyam@med.uni-muenchen.de"},
@@ -39,6 +39,7 @@ dependencies = [
     "python-cfonts>=1.0.0",
     "instructor>=1.0.0",
     "reportlab>=4.4.4",
+    "requests>=2.31.0",
 ]
 
 [project.optional-dependencies]
