🔧 Fix .gitignore and Add Pre-Push Test Infrastructure
✅ Critical Fixes:
- Fixed .gitignore to allow requirements.txt and .dockerignore
- Removed overly broad *.txt exclusion that broke Docker builds
- Cleaned up duplicate ignore rules and conflicting entries

🧪 Test Infrastructure:
- Added comprehensive pre-push validation system
- Created test cases for schema generation, PDF extraction, summarization
- Added Makefile for easy test execution (make test, make pre-push)
- Automated test validation using real datasets

📦 Docker/Python Support:
- webapp/backend/requirements.txt now properly tracked
- webapp/backend/.dockerignore included for optimized builds
- Fixed build dependencies and container functionality

🎯 Ready for Production:
- All essential files properly version controlled
- Pre-push validation ensures quality before deployment
- Docker builds will work correctly with proper file inclusion

--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,6 @@ Thumbs.db
 # Project specific
 # Allow committing PDFs that are intentionally included for testing/documentation
 # (Previously: *.pdf)
-*.txt
 reports/
 output/
 temp/
@@ -85,17 +84,17 @@ temp/
 *.bak
 
 # Docker
-.dockerignore
 docker-compose.override.yml
 .docker/
+
+# Allow essential files but ignore logs and temp text files
+*.log.txt
+*temp*.txt
+*debug*.txt
 
 # Development files
 .vscode/settings.json
 .vscode/launch.json
-*.swp
-*.swo
-*~
-.DS_Store
 
 # Logs
 *.log
@@ -113,4 +112,3 @@ config/local_*
 .mypy_cache/
 .dmypy.json
 dmypy.json
-.env
