--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "mosaicx"
-version = "1.2.1"
+version = "1.3.0"
 description = "Medical cOmputational Suite for Advanced Intelligent eXtraction"
 authors = [
     {name = "Lalith Kumar Shiyam Sundar", email = "lalith.shiyam@med.uni-muenchen.de"},
@@ -40,6 +40,7 @@ dependencies = [
     "instructor>=1.0.0",
     "reportlab>=4.4.4",
     "requests>=2.31.0",
+    "json-repair>=0.30.0",
 ]
 
 [project.optional-dependencies]
