--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
     "reportlab>=4.4.4",
     "requests>=2.31.0",
     "json-repair>=0.30.0",
+    "outlines>=1.2.9",
 ]
 
 [project.optional-dependencies]
