--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
     "dspy>=2.6.0",
+    "outlines>=1.2.0",
     "surya-ocr>=0.17.0",
     "chandra-ocr>=0.1.8",
     "python-cfonts>=1.5.0",
